-						 >  Remove early_page_table, use brk_base instead.
-						 >  Map to both virtual address 0 and 0xC0000000.
-						 >  Add kernel_sig to check image integrity.


Tue Sep 22 CST 2015
- [+] scripts/vim-syntax/gas.vim
- [+] include/asm-generic/sections.h		[D] extern symbols from linker script.
- [+] arch/x86/include/asm/sections.h
- [+] arch/x86/include/asm/setup.h
- [+] arch/x86/kernel/setup.c			[D] Architecture-specific setup
- [M] arch/x86/kernel/head.S			[D] Clean up, jump to start_kernel
- [M] init/main.c				[D] Move arch-specific code to arch_setup()


Wed Sep 23 CST 2015
- [+] Diary/09-23-2015
- [+] include/sandix/major.h			[D] Device Major Number
- [M] include/sandix/tty.h			[D] struct tty_struct etc.
- [M] arch/x86/include/asm/current.h		[D] Renamed from sched.h
- [M] drivers/tty/tty_io.c			[D] Add tty_register_driver etc.
- [M] drivers/console/console.c			[D] Add struct tty_driver console_driver.
-						 >  console_driver is the interface between
-						 >  tty layer and vitual console layer.


Thu Sep 24 CST 2015
- [+] Diary/09-24-2015
- [+] include/sandix/signal.h			[D] Yes! POSIX Signals!
- [+] include/sandix/magic.h			[D] Magic number for structures
- [+] drivers/tty/serial.c
- [+] drivers/tty/dummy.c
- [M] include/sandix/console.h			[D] Add magic number to struct vc_struct
- [M] include/sandix/tty.h			[D] Modify tty_struct.
-						 >  Rename struct console to void *driver_data.
-						 >  Since tty_driver is NOT dedicated for
-						 >  console! We have serial tty driver, too!
-						 >  SO! Use driver_data instead to let struct
-						 >  tty_drvier to work on themself.


Fri Sep 25 CST 2015
- [M] drivers/tty/tty_io.c			[D] driver struct support
- [M] include/sandix/tty.h			[D] Line discipline sperated


Mon Sep 28 CST 2015
- [+] drivers/tty/n_tty.c			[D] Line discipline for tty
- [M] drivers/tty/tty_io.c			[D] Add tty_std_termios support
- [M] include/sandix/termios.h			[D] Fully support termios
- [M] include/sandix/tty.h			[D] Minor fix