@@ -1,6 +1,4 @@
 /*
- *	include/sandix/atomic.h - Atomic Operations
- *
  *	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
  *
  *	This program is free software; you can redistribute it and/or modify
